include ../common.make

rules_sources =  \
	AvoidDeclaringCustomDelegatesRule.cs \
	AvoidMethodWithUnusedGenericTypeRule.cs \
	DoNotExposeNestedGenericSignaturesRule.cs \
	ImplementGenericCollectionInterfacesRule.cs \
	PreferGenericsOverRefObjectRule.cs \
	UseGenericEventHandlerRule.cs

EXTRA_TESTS_OPTIONS += -r:System.Xml.dll -r:System.Xml.Linq.dll

tests_sources = \
	AvoidDeclaringCustomDelegatesTest.cs \
	AvoidMethodWithUnusedGenericTypeTest.cs \
	DoNotExposeNestedGenericSignaturesTest.cs \
	ImplementGenericCollectionInterfacesTest.cs \
	PreferGenericsOverRefObjectTest.cs \
	UseGenericEventHandlerTest.cs
