include ../common.make

rules_sources =  \
	AvoidDeclaringCustomDelegatesRule.cs \
	AvoidExcessiveParametersOnGenericTypesRule.cs \
	AvoidMethodWithUnusedGenericTypeRule.cs \
	DoNotDeclareStaticMembersOnGenericTypesRule.cs \
	DoNotExposeGenericListsRule.cs \
	DoNotExposeNestedGenericSignaturesRule.cs \
	GenericsBaseRule.cs \
	ImplementGenericCollectionInterfacesRule.cs \
	PreferGenericsOverRefObjectRule.cs \
	UseGenericEventHandlerRule.cs

EXTRA_TESTS_OPTIONS += -r:System.Xml.dll -r:System.Xml.Linq.dll

tests_sources = \
	AvoidDeclaringCustomDelegatesTest.cs \
	AvoidExcessiveParametersOnGenericTypesTest.cs \
	AvoidMethodWithUnusedGenericTypeTest.cs \
	DoNotDeclareStaticMembersOnGenericTypesTest.cs \
	DoNotExposeGenericListsTest.cs \
	DoNotExposeNestedGenericSignaturesTest.cs \
	ImplementGenericCollectionInterfacesTest.cs \
	PreferGenericsOverRefObjectTest.cs \
	UseGenericEventHandlerTest.cs
